# 3d-pointcloud

./: CMakeLists.txt  package.xml
src/: VoxelGrid_filter.h  clustering.h  includes.h  lanes.cpp  octree.cpp  pclstream.cpp  rg_seg.cpp  road.cpp  test.cpp  trial.cpp  velo_points.cpp  velo_points_0.cpp
src/meaningfull code/src/: don.cpp  lanes.cpp  road.cpp  test.cpp  velo_points.cpp
src/meaningfullResults/lanes1/: cloud_cluster_0.4_0.pcd  cloud_cluster_0.4_1.pcd  cloud_cluster_0.4_10.pcd  cloud_cluster_0.4_11.pcd  cloud_cluster_0.4_12.pcd  cloud_cluster_0.4_13.pcd  cloud_cluster_0.4_14.pcd  cloud_cluster_0.4_15.pcd  cloud_cluster_0.4_16.pcd  cloud_cluster_0.4_17.pcd  cloud_cluster_0.4_18.pcd  cloud_cluster_0.4_19.pcd  cloud_cluster_0.4_2.pcd  cloud_cluster_0.4_20.pcd  cloud_cluster_0.4_21.pcd  cloud_cluster_0.4_22.pcd  cloud_cluster_0.4_23.pcd  cloud_cluster_0.4_24.pcd  cloud_cluster_0.4_25.pcd  cloud_cluster_0.4_26.pcd  cloud_cluster_0.4_27.pcd  cloud_cluster_0.4_28.pcd  cloud_cluster_0.4_29.pcd  cloud_cluster_0.4_3.pcd  cloud_cluster_0.4_30.pcd  cloud_cluster_0.4_31.pcd  cloud_cluster_0.4_32.pcd  cloud_cluster_0.4_33.pcd  cloud_cluster_0.4_34.pcd  cloud_cluster_0.4_35.pcd  cloud_cluster_0.4_36.pcd  cloud_cluster_0.4_37.pcd  cloud_cluster_0.4_38.pcd  cloud_cluster_0.4_39.pcd  cloud_cluster_0.4_4.pcd  cloud_cluster_0.4_40.pcd  cloud_cluster_0.4_41.pcd  cloud_cluster_0.4_42.pcd  cloud_cluster_0.4_43.pcd  cloud_cluster_0.4_44.pcd  (+51 more)
src/meaningfullResults/mbldg/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_10.pcd  cloud_cluster_11.pcd  cloud_cluster_12.pcd  cloud_cluster_13.pcd  cloud_cluster_14.pcd  cloud_cluster_15.pcd  cloud_cluster_16.pcd  cloud_cluster_17.pcd  cloud_cluster_18.pcd  cloud_cluster_19.pcd  cloud_cluster_2.pcd  cloud_cluster_20.pcd  cloud_cluster_21.pcd  cloud_cluster_22.pcd  cloud_cluster_23.pcd  cloud_cluster_24.pcd  cloud_cluster_25.pcd  cloud_cluster_26.pcd  cloud_cluster_27.pcd  cloud_cluster_28.pcd  cloud_cluster_29.pcd  cloud_cluster_3.pcd  cloud_cluster_30.pcd  cloud_cluster_31.pcd  cloud_cluster_32.pcd  cloud_cluster_33.pcd  cloud_cluster_34.pcd  cloud_cluster_35.pcd  cloud_cluster_36.pcd  cloud_cluster_37.pcd  cloud_cluster_38.pcd  cloud_cluster_39.pcd  cloud_cluster_4.pcd  cloud_cluster_40.pcd  cloud_cluster_41.pcd  cloud_cluster_42.pcd  cloud_cluster_43.pcd  cloud_cluster_44.pcd  (+36 more)
src/meaningfullResults/road detetcion/: cloud_cluster_10_.pcd  cloud_cluster_11_.pcd  cloud_cluster_12_.pcd  cloud_cluster_13_.pcd  cloud_cluster_14_.pcd  cloud_cluster_15_.pcd  cloud_cluster_16_.pcd  cloud_cluster_17_.pcd  cloud_cluster_18_.pcd  cloud_cluster_19_.pcd  cloud_cluster_1_.pcd  cloud_cluster_20_.pcd  cloud_cluster_21_.pcd  cloud_cluster_22_.pcd  cloud_cluster_23_.pcd  cloud_cluster_24_.pcd  cloud_cluster_25_.pcd  cloud_cluster_26_.pcd  cloud_cluster_27_.pcd  cloud_cluster_28_.pcd  cloud_cluster_29_.pcd  cloud_cluster_2_.pcd  cloud_cluster_30_.pcd  cloud_cluster_31_.pcd  cloud_cluster_32_.pcd  cloud_cluster_33_.pcd  cloud_cluster_34_.pcd  cloud_cluster_35_.pcd  cloud_cluster_36_.pcd  cloud_cluster_37_.pcd  cloud_cluster_38_.pcd  cloud_cluster_39_.pcd  cloud_cluster_3_.pcd  (+17 more)
